--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ h2, h3 {
 }
 body {
   margin: 2em;
-  background-color: seashell;
+  /* background-color: seashell; */
 }
 body, input[text], button {
   color: #888;
